# huffman-compactor

./: .gitmodules  CMakeLists.txt  README.md
app/: compact.cxx  decompact.cxx  entropy.cxx
